# fse_dump

./: .gitignore  .justfile  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  dprint.json  imhex.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.bash  deploy.sh
src/: file_parser.rs  flags.rs  main.rs  opts.rs  record.rs  uniques.rs  version.rs
