[package]
name = "fse_dump"
description = "Dumps the fseventsd entries from a mac"

version = "1.11.3"
edition = "2021"

authors = ["Adam Lesperance <lespea@gmail.com>"]
categories = ["os::macos-apis", "command-line-utilities"]
keywords = ["mac", "fseventsd", "security", "forensics"]

license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/lespea/fse_dump"
repository = "https://github.com/lespea/fse_dump"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bus = "2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0"
crossbeam-channel = "0"
csv = "1"
env_logger = "0"
flate2 = { version = "1", features = ["cloudflare_zlib"], default-features = false }
hashbrown = "0.14"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
mimalloc = { version = "0.1", features = ["secure"] }
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
time = { version = "0.3.32", features = ["local-offset"] }
walkdir = "2"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
strip = true

