[package]
name = "fse_dump"
description = "Dumps the fseventsd entries from a mac"

version = "2.1.3"
edition = "2021"

authors = ["Adam Lesperance <lespea@gmail.com>"]
categories = ["os::macos-apis", "command-line-utilities"]
keywords = ["mac", "fseventsd", "security", "forensics"]

license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/lespea/fse_dump"
repository = "https://github.com/lespea/fse_dump"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["hex", "extra_id", "watch", "zstd"]

alt_flags = []
extra_id = []

hex = ["dep:serde-hex"]
watch = ["dep:notify-debouncer-full"]
zstd = ["dep:zstd"]

[dependencies]
bus = "2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
color-eyre = { version = "0", default-features = false }
crossbeam = "0"
crossbeam-channel = "0"
csv = "1"
env_logger = "0"
flate2 = { version = "1", features = [
    "cloudflare_zlib",
], default-features = false }
hashbrown = "0"
log = { version = "0", features = [
    "max_level_debug",
    "release_max_level_info",
] }
mimalloc = { version = "0", features = ["secure"] }
notify = { version = "8", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = { version = "0", optional = true }
regex = "1"
serde = { version = "1", features = ["rc"] }
serde-hex = { version = "0", optional = true }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0"
time = { version = "0", features = ["local-offset"] }
walkdir = "2"
zstd = { version = "0", features = ["zstdmt"], optional = true }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = true
strip = true
